# MonCTL

./: .env.example  .gitignore  CLAUDE.md  INSTALL.md  LICENSE  MonCTL-technical-overview.pptx  README.md  SYSTEM.md  TROUBLESHOOTING.md  UPGRADE.md  api-spec.json  app_create.md  collector-design-final.docx  collector-implementation-guide.docx  deploy.sh  inventory.example.large.yaml  inventory.example.micro.yaml  inventory.example.small.yaml  linux-server-v2.0.0.json  pyproject.toml  snmp-availability-v1.0.0.json  snmp-uptime-v1.0.0.json
.claude/: settings.json
apps/: http_check.py  ping_check.py  port_check.py  snmp_check.py  snmp_discovery.py  snmp_interface_poller.py  snmp_uptime.py
connectors/: snmp.py  ssh.py
design_handoff_devices_beta/: Devices Redesign.html  README.md  data.jsx  icons.jsx  v1-safe.jsx
docker/: Dockerfile.central  Dockerfile.collector  Dockerfile.collector-v2  Dockerfile.docker-stats  central-entrypoint.sh  clickhouse-config.xml  clickhouse-keeper-config.xml  clickhouse-monctl-tenant-scope.xml  collector-entrypoint.sh  deploy.sh  docker-compose.central-ha.yml  docker-compose.central-prod.yml  docker-compose.clickhouse-keeper.yml  docker-compose.clickhouse.yml  docker-compose.collector-prod.yml  docker-compose.collector.yml  docker-compose.docker-stats.yml  docker-compose.e2e.yml  docker-compose.etcd.yml  docker-compose.haproxy.yml  docker-compose.simulator.yml  docker-compose.superset.yml  docker-compose.yml  docker-stats-server.py  generate-tls-cert.sh  haproxy.cfg  keepalived.conf  monctl  nginx-apt-cache.conf  nginx-apt-mode.sh  (+2 more)
(+92 files in other folders)
